syntax = "proto3";
option go_package = "protobuf/";

message ItemDto {
    string id = 1;
    string key = 2;
    map<string, string> attributes = 3;
    string data_source_id = 4;
    string project_key = 5;
}

message ItemDtoList {
    repeated ItemDto values = 2;
}