syntax = "proto3";
option go_package = "protobuf/";

message UserMappingDto {
    string project_key = 1;
    int64 send_time = 2;
    map<string, string> identifies = 3;
    string data_source_id = 4;
}

message UserMappingDtoList {
    repeated UserMappingDto values = 1;
}
